--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">My App Portfolio</string>
+    <string name="title">My Nanodegree Apps</string>
     <string name="popular_movies">POPULAR MOVIES</string>
     <string name="stock_hawk">STOCK HAWK</string>
     <string name="build_it_bigger">BUILD IT BIGGER</string>
